Feature: download current configuration

--- a/src/badweathermounttester/templates/index.html
+++ b/src/badweathermounttester/templates/index.html
@@ -1067,6 +1067,7 @@
 
         <div class="actions">
             <button class="btn btn-secondary" id="btn-back" disabled>{{ _('Back') }}</button>
+            <a href="/config" target="_blank" class="btn btn-secondary" style="text-decoration: none;">{{ _('Current Config') }}</a>
             <button class="btn" id="btn-next">{{ _('Next') }}</button>
         </div>
     </div>
